<resources>
    <string name="app_name">Score Keeper B</string>
    <string name="player">Player</string>
    <string name="scorea">0</string>
    <string name="scoreb">0</string>
    <string name="one">+1</string>
    <string name="two">+2</string>
    <string name="three">+3</string>
    <string name="four">+4</string>
    <string name="five">+5</string>
    <string name="six">+6</string>
    <string name="seven">+7</string>
    <string name="eight">+8</string>
    <string name="nine">+9</string>
    <string name="ten">+10</string>
    <string name="eleven">+11</string>
    <string name="dealer">Dealer</string>
    <string name="reset">Reset</string>
    <string name="winner">Who wins?</string>
</resources>